--- a/.ci/docker-compose.override.yml
+++ b/.ci/docker-compose.override.yml
@@ -5,23 +5,20 @@ services:
   logstash:
     command: /usr/share/plugins/plugin/.ci/logstash-run.sh
     environment:
-        - INTEGRATION=${INTEGRATION:-false}
+        - INTEGRATION=true
         - SECURE_INTEGRATION=${SECURE_INTEGRATION:-false}
-        - ELASTIC_STACK_VERSION=$ELASTIC_STACK_VERSION
-  elasticsearch:
+
+  integration:
     build:
       context: ../
-      dockerfile: .ci/Dockerfile.elasticsearch
+      dockerfile: .ci/Dockerfile.opensearch
       args:
-        - ELASTIC_STACK_VERSION=$ELASTIC_STACK_VERSION
-        - INTEGRATION=${INTEGRATION:-false}
+        - OPENSEARCH_VERSION=${OPENSEARCH_VERSION:-latest}
+        - INTEGRATION=true
         - SECURE_INTEGRATION=${SECURE_INTEGRATION:-false}
     environment:
-      #- ELASTIC_PASSWORD=$ELASTIC_PASSWORD a user is setup manually
-      - xpack.security.enabled=${SECURE_INTEGRATION:-false}
       - bootstrap.memory_lock=true
       - discovery.type=single-node
-      - ES_JAVA_OPTS=-Xms640m -Xmx640m
     tty: true
     ulimits:
       memlock:
@@ -29,5 +26,5 @@ services:
         hard: -1
     ports:
       - "9200:9200"
-    user: elasticsearch
+    user: opensearch
 
